--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		var distance = 1000;
 		var diag = Math.sqrt((height*height)+(width*width))
 		var fov = 2 * Math.atan((diag) / (2 * distance)) * (180 / Math.PI); //Field of View
-		var camera = new THREE.PerspectiveCamera(24, window.innerWidth / window.innerHeight, 0.1, distance);
+		var camera = new THREE.PerspectiveCamera(2, window.innerWidth / window.innerHeight, 0.1, distance);
 		camera.position.set(0, 25, -50);
 
       //Canvas
@@ -55,7 +55,7 @@
 		document.body.appendChild( renderer.domElement );
 
 		//LIGHTS
-		var light = new THREE.AmbientLight(0xffffff, 3);
+		var light = new THREE.AmbientLight(0xFF0000, 4);
 		light.power = 6640;  // GE Lumens @ 60W incade.
 		light.decay = 2;
 		light.distance = Infinity;
